[package]
name = "mixie"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.1"
cpal = "0.13.5"
crossbeam = "0.8.1"
ctrlc = "3.2.2"
hound = "3.4.0"
num = "0.4.0"
parking_lot = "0.12.0"
rand = "0.8.5"
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = ["env-filter", "fmt"] }
